<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.a3.yearlyprogess.MainActivity">


    <item
        android:id="@+id/backupRestoreMenu"
        android:icon="@drawable/settings_backup_restore"
        android:title="@string/backup_restore"
        app:showAsAction="never" />


    <item
        android:id="@+id/shareMenu"
        android:icon="@drawable/ic_outline_share_24"
        android:title="@string/share"
        app:showAsAction="never" />



    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/infoMenu"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/about"
        app:showAsAction="never" />


</menu>