<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismissButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:icon="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_restore" />

                <TextView
                    android:id="@+id/buildVersion"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_restore_message" />


                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/backup_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/backup"
                            app:icon="@drawable/outline_backup_24"
                            />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/restore_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restore"
                            app:icon="@drawable/settings_backup_restore"
                            style="@style/Widget.Material3.Button.TonalButton"
                            />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>